# sigil

./: .gitignore  CHANGELOG.md  OVERNIGHT_LOG.md  README.md  STATE.md  pyinstaller.spec  pyproject.toml  v2_ROADMAP.md
.github/workflows/: eval.yml  lint.yml  release.yml  test.yml
eval/: obfuscate.py  report.json  report_baseline_60.8.json  report_pylingual.json  report_pylingual_v2.json  report_pylingual_v3.json  report_pylingual_v4.json  report_pylingual_v5.json
eval/cases/: 01_arithmetic.py  02_string_ops.py  03_loops.py  04_conditionals.py  05_list_comprehension.py  06_dict_ops.py  07_class_basic.py  08_inheritance.py  09_recursion.py  10_lambda.py  11_exception_handling.py  12_file_io.py  13_json_roundtrip.py  14_regex.py  15_datetime.py  16_collections_counter.py  17_generators.py  18_decorators.py  19_context_managers.py  20_dataclasses.py
eval/obfuscated/01_arithmetic/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/02_string_ops/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/03_loops/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/04_conditionals/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/05_list_comprehension/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/06_dict_ops/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/07_class_basic/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/08_inheritance/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/09_recursion/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/10_lambda/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/11_exception_handling/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/12_file_io/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/13_json_roundtrip/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/14_regex/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/15_datetime/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/16_collections_counter/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/17_generators/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/18_decorators/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/19_context_managers/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
eval/obfuscated/20_dataclasses/: L1_base64.py  L2_marshal.py  L3_zlib_marshal.py  L5_lambda_wall.py
pyglimmer_toolkit/: __init__.py  __main__.py  cli.py
pyglimmer_toolkit/core/: __init__.py  cleanup.py  decompile.py  dotnet_deobfuscator.py  extract.py  generic_python_stripper.py  pipeline.py  pyarmor_unpacker.py  unwrap.py
pyglimmer_toolkit/gui/: __init__.py
pyglimmer_toolkit/utils/: __init__.py  hashing.py  process.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_cli.py  test_decompile.py  test_detect.py  test_pipeline.py  test_pyinstaller_extract.py  test_unwrap.py
tools/: pylingual-info.txt  pylingual_info.json
