[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
# Cut-scope rename: per 05_ADVERSARIAL_REVIEW.md, v1 ships only the generic
# Python stripper. The .NET sidecar and PyArmor wrap are deferred to v2.
# Renaming the PyPI package now (rather than at v1.0.0) keeps the public
# surface honest with the project's actual scope.
name = "pyglimmer-stripper"
version = "0.0.1.dev1"
description = "Generic Python obfuscation stripper with optional LLM cleanup. Extracts, unwraps, decompiles, and cleans .pyc / PyInstaller-bundled .py."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "PyGlimmer Contributors" },
]
keywords = ["reverse-engineering", "deobfuscation", "python", "pycdc", "pylingual", "llm-cleanup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

# Runtime dependencies are intentionally MINIMAL for v0 — the actual decompiler
# integrations land in 0.1.0 once the architecture is proven. This keeps the
# skeleton installable on a fresh box in <30 seconds.
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",  # OS keyring for LLM API keys (GDPR-compliant default)
]

[project.optional-dependencies]
# Decompiler integration (added in 0.1.0)
# pycdc is a C++ binary; we shell out to it. No Python wheel exists.
# pylingual is a Python package; we install alongside but never import (subprocess-only).
#
# IMPORTANT: pylingual on PyPI is currently at 0.1.0 (verified 2026-06-18).
# Their PyPI page (https://pypi.org/project/pylingual/) lists 0.1.0 as the
# current release.  Pinning to >=0.1.0,<0.2.0 is the right call for v0.0.1
# so we get a usable install.  Bump this floor when pylingual ships 0.2.0+.
decompilers = [
    "pylingual>=0.1.0,<0.2.0; python_version >= '3.11'",
]

# GUI (added in v1.1, NOT v1)
gui = [
    "PySide6>=6.6.0",
    "QScintilla>=2.14.0",
    "pygments>=2.17.0",
]

# LLM cleanup (added in 0.1.0)
# Default: local Ollama. Cloud Anthropic/OpenAI gated by --send-to-cloud
# and requires the API key in the OS keyring.
llm = [
    "ollama>=0.4.0",
    "anthropic>=0.39.0",
    "openai>=1.40.0",
]

# IMPORTANT — verified fact F-11: Nuitka is v4.1.2 / AGPL-3.0 (NOT v2.7.15 /
# Apache-2.0 as the original draft stated). AGPL-3.0 is significantly more
# viral than Apache-2.0, and combining AGPL-3.0 with GPL-3.0 in the same
# binary is at minimum license-confusing. The "migrate to Nuitka in v1.1"
# plan is OFF the table. v1 and v1.1 ship with PyInstaller 6.21.0.

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]

[project.urls]
Homepage = "https://github.com/USER/pyglimmer-stripper"
Issues = "https://github.com/USER/pyglimmer-stripper/issues"

# IMPORTANT: the on-disk source tree uses the package name `pyglimmer_toolkit`
# (preserved from the original PyGlimmer project before the v1 cut-scope
# rename).  We expose the canonical CLI as `sigil` (see cli.py) and let
# users also invoke via `python -m pyglimmer_toolkit`.  The `pyglimmer`
# script entry point installs the package's cli:app callable; on import
# it resolves through the on-disk `pyglimmer_toolkit` package.
#
# Do NOT change this to `pyglimmer_stripper.cli:app` unless the source tree
# is also renamed - the entry point and the on-disk package must agree.
[project.scripts]
sigil = "pyglimmer_toolkit.cli:app"

[tool.hatch.build.targets.wheel]
# Package source layout.  v1 ships the cut-scope package; the v2 .NET and
# PyArmor pillars are not packaged.  The on-disk package directory is
# `pyglimmer_toolkit/` (preserved from the original PyGlimmer project),
# not the renamed PyPI name `pyglimmer-stripper`.
packages = ["pyglimmer_toolkit"]

[tool.hatch.build.targets.wheel.shared-data]
# Config templates (LLM cleanup prompt, default detection rules) bundled as data.
"pyglimmer_toolkit/data" = "pyglimmer_toolkit/data"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "PIE", "RET", "SIM"]
ignore = ["E501"]  # line-length is enforced by formatter, not linter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# Decompiler subprocess modules can be untyped; ignore missing imports for them.
[[tool.mypy.overrides]]
module = ["pylingual.*", "xdis.*", "uncompyle6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
# Match the on-disk package directory (not the renamed PyPI name).
source = ["pyglimmer_toolkit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "STUB:",
]
